# Q-learning_wurm

./: .gitignore  CMakeLists.txt  DEADJOE  README.md
doc/: final_feedback.txt
src/: .~lock.manual.docx#  CMakeLists.txt  Hello  README  Wurm.cpp  main.cpp  world.cpp  world.hpp  wurm.cpp  wurm.hpp
src/3rdpartylibs/Box2D/Testbed/: CMakeLists.txt
src/3rdpartylibs/Box2D/Testbed/Tests/: FooTest.h  MotorJoint.h  TestEntries.cpp  WurmTest.h  wurm.hpp
src/3rdpartylibs/Box2D_v2.1.2/Box2D/Box2D/: CMakeLists.txt
src/cmake_modules/: FindBox2D.cmake
src/hello/: Hello
src/qbot/: CMakeLists.txt  Hello  README  brains.cpp  brains.hpp  cpu_time.cpp  cpu_time.hpp  draw.cpp  draw.hpp  main.cpp  qlearning.cpp  qlearning.hpp  qtester.cpp  qtesting.cpp  sfml-app  world.cpp  world.hpp  wurm.cpp  wurm.hpp
src/qbot/GUI/Tests/: FooTest.h
