set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_library(World world.cpp)
add_library(Wurm wurm.cpp)
add_library(Brains brains.cpp)
add_library(QLearning qlearning.cpp)
add_executable(bot main.cpp)
target_link_libraries(bot Box2D World Brains ${SFML_LIBRARIES})
target_link_libraries(World Brains Box2D)
target_link_libraries(Brains Wurm QLearning Box2D)
