set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_library(World world.cpp)
add_library(Wurm wurm.cpp)
add_library(Brains brains.cpp)
add_library(QLearning qlearning.cpp)
add_library(Draw draw.cpp)
add_executable(bot main.cpp)
find_library($(PROJECT_SOURCE_DIR)/3rdpartylibs/Box2D REQUIRED)
target_link_libraries(bot Box2D World Brains Draw ${SFML_LIBRARIES})
target_link_libraries(World Brains Box2D)
target_link_libraries(Brains Wurm QLearning Box2D)
